[package]
name = "neuring"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
libc = "0.2.137"
rand = { version = "0.8.5", features = ["small_rng"] }
thiserror = "1.0.37"
io-uring = "0.5.9"
rand_pcg = "0.3.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
